

RELEASE NOTES
=============


2.43.1 - August ??, 2011

    Added experimental support for using a predicate template as argument to
    the coinductive/1 directive. This template allows the specification of
    which arguments are meaningful for coinductive success. Based on similar
    functionality found on on Feliks Kluzniak's DRA meta-interpreter.

    Lifted a long-standing limitation that prevented the user definition of
    wrapper predicates for the bagof/3 and setof/3 built-in methods whenever
    the goal argument may use the ^/2 existential quantifier.

    Added support for the "^" meta-predicate meta-argument mode specifier
    suggested by Jan Wielemaker and found on SWI-Prolog 5.11.25. This mode
    specifier is useful when defining wrappers for the bagof/3 and setof/3
    built-in methods whenever the goal argument may use the ^/2 existential
    quantifier.

    Corrected a bug when compiling calls to Prolog proprietary built-in meta-
    predicates where the Logtalk compiler could attempt to process non meta-
    arguments as goals. This bug only manifested itself with some back-end
    Prolog compilers such as ECLiPSe.

    Removed from the built-in object "logtalk" the decompile_predicate_head/4
    and decompile_predicate_indicator/4 deprecated methods.

    Removed support for the long deprecated Logtalk metapredicate/1 directive.

    Corrected a performance bug when caching calls to category predicates where
    the cached entries could be more specific than necessary when working with
    parametric categories.

    Improved caching of "super" calls from within prototypes. Previously, all
    cached entries would be specialized by the value of "self" in order to
    properly deal with the special cases where an object both instantiates and
    specializes other objects.

    Updated the Logtalk compiler to activate any operator declarations found
    on predicate scope directives during the compilation of the entities that